[gd_scene load_steps=39 format=3 uid="uid://dbq85xa0fcnii"]

[ext_resource type="Script" uid="uid://klae0u71y1go" path="res://Scripts/UiController.gd" id="1_wi7yl"]
[ext_resource type="FontFile" uid="uid://dqqnsnb5xkqx7" path="res://Assets/Fonts/8bitoperator_jve.ttf" id="2_5q4fb"]
[ext_resource type="Texture2D" uid="uid://b6a7pab0tyxve" path="res://Assets/Art/Boats/button.png" id="3_mqm5i"]
[ext_resource type="Texture2D" uid="uid://cm5h1c54c0p4o" path="res://Assets/Art/Temp/arrow (probably temporary ).png" id="4_jnovg"]
[ext_resource type="Texture2D" uid="uid://ct8jpo3l1w4n1" path="res://Assets/Art/Boats/raft.png" id="5_13dyv"]
[ext_resource type="Texture2D" uid="uid://bu18xywouviyc" path="res://Assets/Art/Boats/betterraft.png" id="6_r71lk"]
[ext_resource type="Texture2D" uid="uid://d1t6687krajsx" path="res://Assets/Art/Boats/canoe.png" id="7_d1ul7"]
[ext_resource type="Texture2D" uid="uid://cit6la2domptf" path="res://Assets/Art/Boats/shit sailboat.png" id="8_pinj1"]
[ext_resource type="Texture2D" uid="uid://c101sa4y877b4" path="res://Assets/Art/Boats/better sailboatt.png" id="9_68ajo"]
[ext_resource type="Texture2D" uid="uid://dpk154ckaycpr" path="res://Assets/Art/Boats/motorboat_1.png" id="10_iufls"]
[ext_resource type="Texture2D" uid="uid://cu7hqhk655a7l" path="res://Assets/Art/Boats/motorboat_2.png" id="11_b8rtp"]
[ext_resource type="Texture2D" uid="uid://drj77blyscrtv" path="res://Assets/Art/under.png" id="12_612k1"]
[ext_resource type="Texture2D" uid="uid://cxq572smso73i" path="res://Assets/Art/over.png" id="13_us6mg"]
[ext_resource type="Texture2D" uid="uid://ykh1qxd24nqw" path="res://Assets/Art/progress.png" id="14_8blbl"]
[ext_resource type="Texture2D" uid="uid://bw2gvkaylchw8" path="res://Assets/Art/coinicon.png" id="15_5q4fb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qxria"]
bg_color = Color(0.19215687, 0.19215687, 0.19215687, 0.49411765)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_f140w"]
texture = ExtResource("3_mqm5i")

[sub_resource type="Animation" id="Animation_xb4mg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Boats:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_8ju71"]
resource_name = "Slide_left"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Boats:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-48, 0)]
}

[sub_resource type="Animation" id="Animation_6t1o7"]
resource_name = "Slide_right"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Boats:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(48, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6t1o7"]
_data = {
&"RESET": SubResource("Animation_xb4mg"),
&"Slide_left": SubResource("Animation_8ju71"),
&"Slide_right": SubResource("Animation_6t1o7")
}

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xc4hf"]
texture = ExtResource("4_jnovg")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6rnll"]
texture = ExtResource("5_13dyv")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_enc0b"]
texture = ExtResource("6_r71lk")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hx8n4"]
texture = ExtResource("7_d1ul7")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_i0j58"]
texture = ExtResource("8_pinj1")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_c1ier"]
texture = ExtResource("9_68ajo")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gyaec"]
texture = ExtResource("10_iufls")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bpy1e"]
texture = ExtResource("11_b8rtp")

[sub_resource type="Gradient" id="Gradient_i0j58"]
offsets = PackedFloat32Array(0.1, 1)
colors = PackedColorArray(0.19215687, 0.19215687, 0.19215687, 1, 0.24477637, 0.2447764, 0.24477637, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_c1ier"]
gradient = SubResource("Gradient_i0j58")
width = 32

[sub_resource type="Gradient" id="Gradient_gyaec"]
offsets = PackedFloat32Array(0, 0)
colors = PackedColorArray(0.19215687, 0.19215687, 0.19215687, 1, 0.19215687, 0.19215687, 0.19215687, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_bpy1e"]
gradient = SubResource("Gradient_gyaec")
width = 96

[sub_resource type="GDScript" id="GDScript_hx8n4"]
script/source = "extends TextureProgressBar

var HP := 5.0
var MAX_HP := 5.0

func _ready() -> void:
	Update()


func Update():
	if HP > MAX_HP:
		HP = MAX_HP
	max_value = 100

	var hpPercent : float = HP / MAX_HP * 100
	print(hpPercent)
	var tween = create_tween()
	tween.tween_property(self, \"value\",hpPercent,1).set_trans(Tween.TRANS_SINE)
	tint_progress = Color.from_hsv(hpPercent/300,1,1)
		
"

[sub_resource type="Animation" id="Animation_wi7yl"]
resource_name = "Countdown"
length = 4.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.70000005, 1.0000002, 1.0999997, 1.7000002, 2.0000002, 2.0999997, 2.7, 3.0000002, 3.0999997, 3.6999998),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -100), Vector2(0, 20), Vector2(0, 20), Vector2(0, -100), Vector2(0, 20), Vector2(0, 20), Vector2(0, -100), Vector2(0, 20), Vector2(0, 20), Vector2(0, -100), Vector2(0, 20)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:theme_override_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.70000005, 1.0000002, 1.7000002, 2.0000002, 2.7, 3.0000002, 3.6999998, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.0000002, 2.0000002, 3.0000002, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": ["3
", "2", "1", "GO", "4"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Label:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.099999905, 1.0000002, 1.0999997, 2.0000002, 2.0999997, 3.0000002, 3.0999997),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false, true, false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(3.6999998, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.0885599, 0.0885599, 0.0885599, 0.4117647), Color(0.09, 0.09, 0.09, 0)]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("..")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"CallStartGame"
}]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_5q4fb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(512, -240)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:theme_override_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["5"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Label:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.0885599, 0.0885599, 0.0885599, 0.4117647)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mqm5i"]
_data = {
&"Countdown": SubResource("Animation_wi7yl"),
&"RESET": SubResource("Animation_5q4fb")
}

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mqm5i"]
texture = ExtResource("15_5q4fb")

[node name="UI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_wi7yl")

[node name="GameOver" type="Panel" parent="."]
process_mode = 2
visible = false
z_index = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -160.0
offset_top = -90.0
offset_right = 160.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qxria")

[node name="quit" type="Button" parent="GameOver"]
z_index = 6
layout_mode = 0
offset_left = 85.0
offset_top = 105.0
offset_right = 213.0
offset_bottom = 145.0
theme_override_fonts/font = ExtResource("2_5q4fb")
theme_override_font_sizes/font_size = 32
action_mode = 0
text = "QUIT
"
flat = true

[node name="Bg" type="Panel" parent="GameOver/quit"]
z_index = -2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxTexture_f140w")

[node name="restart" type="Button" parent="GameOver"]
z_index = 6
layout_mode = 0
offset_left = 85.0
offset_top = 58.0
offset_right = 213.0
offset_bottom = 98.0
theme_override_fonts/font = ExtResource("2_5q4fb")
theme_override_font_sizes/font_size = 32
action_mode = 0
text = "RESET
"
flat = true

[node name="Bg" type="Panel" parent="GameOver/restart"]
z_index = -2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxTexture_f140w")

[node name="TopText" type="Label" parent="GameOver"]
layout_mode = 0
offset_left = 60.0
offset_top = 1.0
offset_right = 240.0
offset_bottom = 49.0
theme_override_fonts/font = ExtResource("2_5q4fb")
theme_override_font_sizes/font_size = 48
text = "GAME OVER"

[node name="Shop" type="Panel" parent="."]
process_mode = 2
visible = false
z_index = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -160.0
offset_top = -90.0
offset_right = 160.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qxria")

[node name="MainAnimations" type="AnimationPlayer" parent="Shop"]
process_mode = 3
libraries = {
&"": SubResource("AnimationLibrary_6t1o7")
}

[node name="TopText" type="Label" parent="Shop"]
layout_mode = 0
offset_top = 1.0
offset_right = 320.0
offset_bottom = 49.0
theme_override_fonts/font = ExtResource("2_5q4fb")
theme_override_font_sizes/font_size = 48
text = "SHOP"
horizontal_alignment = 1

[node name="Next" type="Button" parent="Shop"]
process_mode = 3
z_index = 4
layout_mode = 0
offset_left = 240.0
offset_top = 74.0
offset_right = 256.0
offset_bottom = 90.0
focus_mode = 0
flat = true

[node name="Bg" type="Panel" parent="Shop/Next"]
z_index = 1
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_xc4hf")

[node name="Prev" type="Button" parent="Shop"]
process_mode = 3
z_index = 4
layout_mode = 0
offset_left = 80.0
offset_top = 74.0
offset_right = 96.0
offset_bottom = 90.0
scale = Vector2(-1, 1)
focus_mode = 0
flat = true

[node name="Bg" type="Panel" parent="Shop/Prev"]
z_index = 1
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_xc4hf")

[node name="Boats" type="Node2D" parent="Shop"]

[node name="0" type="Panel" parent="Shop/Boats"]
offset_left = 96.0
offset_top = 58.0
offset_right = 128.0
offset_bottom = 90.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_6rnll")

[node name="Label" type="Label" parent="Shop/Boats/0"]
layout_mode = 0
offset_left = -16.000008
offset_top = 32.0
offset_right = 115.77178
offset_bottom = 55.0
scale = Vector2(0.48568818, 0.48568818)
theme_override_fonts/font = ExtResource("2_5q4fb")
text = "Basic raft"
horizontal_alignment = 1

[node name="Button" type="Button" parent="Shop/Boats/0"]
layout_mode = 0
offset_top = 43.17083
offset_right = 85.32764
offset_bottom = 67.17083
scale = Vector2(0.37502515, 0.37502515)
theme_override_fonts/font = ExtResource("2_5q4fb")
text = "Purchase"

[node name="1" type="Panel" parent="Shop/Boats"]
offset_left = 144.0
offset_top = 58.0
offset_right = 176.0
offset_bottom = 90.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_enc0b")

[node name="Label" type="Label" parent="Shop/Boats/1"]
layout_mode = 0
offset_left = -16.000008
offset_top = 32.0
offset_right = 115.77178
offset_bottom = 55.0
scale = Vector2(0.48568818, 0.48568818)
theme_override_fonts/font = ExtResource("2_5q4fb")
text = "Metal raft"
horizontal_alignment = 1

[node name="Button" type="Button" parent="Shop/Boats/1"]
layout_mode = 0
offset_top = 43.17083
offset_right = 85.32764
offset_bottom = 67.17083
scale = Vector2(0.37502515, 0.37502515)
theme_override_fonts/font = ExtResource("2_5q4fb")
text = "Purchase"

[node name="2" type="Panel" parent="Shop/Boats"]
offset_left = 192.0
offset_top = 58.0
offset_right = 224.0
offset_bottom = 90.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_hx8n4")

[node name="Label" type="Label" parent="Shop/Boats/2"]
layout_mode = 0
offset_left = -16.000008
offset_top = 32.0
offset_right = 115.77178
offset_bottom = 55.0
scale = Vector2(0.48568818, 0.48568818)
theme_override_fonts/font = ExtResource("2_5q4fb")
text = "Basic canoe"
horizontal_alignment = 1

[node name="Button" type="Button" parent="Shop/Boats/2"]
layout_mode = 0
offset_top = 43.17083
offset_right = 85.32764
offset_bottom = 67.17083
scale = Vector2(0.37502515, 0.37502515)
theme_override_fonts/font = ExtResource("2_5q4fb")
text = "Purchase"

[node name="3" type="Panel" parent="Shop/Boats"]
offset_left = 240.0
offset_top = 58.0
offset_right = 272.0
offset_bottom = 90.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_i0j58")

[node name="Label" type="Label" parent="Shop/Boats/3"]
layout_mode = 0
offset_left = -16.000008
offset_top = 32.0
offset_right = 115.77178
offset_bottom = 55.0
scale = Vector2(0.48568818, 0.48568818)
theme_override_fonts/font = ExtResource("2_5q4fb")
text = "Sailboat"
horizontal_alignment = 1

[node name="Button" type="Button" parent="Shop/Boats/3"]
layout_mode = 0
offset_top = 43.17083
offset_right = 85.32764
offset_bottom = 67.17083
scale = Vector2(0.37502515, 0.37502515)
theme_override_fonts/font = ExtResource("2_5q4fb")
text = "Purchase"

[node name="4" type="Panel" parent="Shop/Boats"]
offset_left = 288.0
offset_top = 58.0
offset_right = 320.0
offset_bottom = 90.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_c1ier")

[node name="Label" type="Label" parent="Shop/Boats/4"]
layout_mode = 0
offset_left = -16.000008
offset_top = 32.0
offset_right = 115.77178
offset_bottom = 55.0
scale = Vector2(0.48568818, 0.48568818)
theme_override_fonts/font = ExtResource("2_5q4fb")
text = "Better sailboat"
horizontal_alignment = 1

[node name="Button" type="Button" parent="Shop/Boats/4"]
layout_mode = 0
offset_top = 43.17083
offset_right = 85.32764
offset_bottom = 67.17083
scale = Vector2(0.37502515, 0.37502515)
theme_override_fonts/font = ExtResource("2_5q4fb")
text = "Purchase"

[node name="5" type="Panel" parent="Shop/Boats"]
offset_left = 336.0
offset_top = 58.0
offset_right = 368.0
offset_bottom = 90.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_gyaec")

[node name="Label" type="Label" parent="Shop/Boats/5"]
layout_mode = 0
offset_left = -16.000008
offset_top = 32.0
offset_right = 115.77178
offset_bottom = 55.0
scale = Vector2(0.48568818, 0.48568818)
theme_override_fonts/font = ExtResource("2_5q4fb")
text = "Motorboat"
horizontal_alignment = 1

[node name="Button" type="Button" parent="Shop/Boats/5"]
layout_mode = 0
offset_top = 43.17083
offset_right = 85.32764
offset_bottom = 67.17083
scale = Vector2(0.37502515, 0.37502515)
theme_override_fonts/font = ExtResource("2_5q4fb")
text = "Purchase"

[node name="6" type="Panel" parent="Shop/Boats"]
offset_left = 384.0
offset_top = 58.0
offset_right = 416.0
offset_bottom = 90.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_bpy1e")

[node name="Label" type="Label" parent="Shop/Boats/6"]
layout_mode = 0
offset_left = -16.000008
offset_top = 32.0
offset_right = 115.77178
offset_bottom = 55.0
scale = Vector2(0.48568818, 0.48568818)
theme_override_fonts/font = ExtResource("2_5q4fb")
text = "Metal motorboat"
horizontal_alignment = 1

[node name="Button" type="Button" parent="Shop/Boats/6"]
layout_mode = 0
offset_top = 43.17083
offset_right = 85.32764
offset_bottom = 67.17083
scale = Vector2(0.37502515, 0.37502515)
theme_override_fonts/font = ExtResource("2_5q4fb")
text = "Purchase"

[node name="FadeLeft" type="TextureRect" parent="Shop"]
layout_mode = 0
offset_left = 96.0
offset_right = 128.0
offset_bottom = 180.0
mouse_filter = 2
texture = SubResource("GradientTexture1D_c1ier")

[node name="BgLeft" type="TextureRect" parent="Shop"]
layout_mode = 0
offset_right = 96.0
offset_bottom = 180.0
mouse_filter = 2
texture = SubResource("GradientTexture1D_bpy1e")

[node name="FadeRight" type="TextureRect" parent="Shop"]
layout_mode = 0
offset_left = 224.0
offset_top = 180.0
offset_right = 256.0
offset_bottom = 360.0
scale = Vector2(-1, -1)
mouse_filter = 2
texture = SubResource("GradientTexture1D_c1ier")

[node name="BgRight" type="TextureRect" parent="Shop"]
layout_mode = 0
offset_left = 320.0
offset_top = 180.0
offset_right = 416.0
offset_bottom = 360.0
scale = Vector2(-1, -1)
mouse_filter = 2
texture = SubResource("GradientTexture1D_bpy1e")

[node name="HP" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = -50.0
offset_top = -89.0
offset_right = 50.0
offset_bottom = -79.0
value = 1.0
texture_under = ExtResource("12_612k1")
texture_over = ExtResource("13_us6mg")
texture_progress = ExtResource("14_8blbl")
tint_progress = Color(1, 0, 0, 1)
script = SubResource("GDScript_hx8n4")

[node name="Countdown" type="ColorRect" parent="."]
visible = false
z_index = 100
layout_mode = 0
offset_left = -160.0
offset_top = -90.0
offset_right = 160.0
offset_bottom = 90.0
mouse_filter = 2
color = Color(0.0885599, 0.0885599, 0.0885599, 0.4117647)

[node name="Label" type="Label" parent="Countdown"]
visible = false
layout_mode = 0
offset_left = 512.0
offset_top = -240.0
offset_right = 832.0
offset_bottom = -35.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_5q4fb")
theme_override_font_sizes/font_size = 100
text = "5"
horizontal_alignment = 1

[node name="Animations" type="AnimationPlayer" parent="Countdown"]
libraries = {
&"": SubResource("AnimationLibrary_mqm5i")
}
autoplay = "Countdown"

[node name="Paused" type="ColorRect" parent="."]
visible = false
z_index = 100
layout_mode = 0
offset_left = -160.0
offset_top = -90.0
offset_right = 160.0
offset_bottom = 90.0
mouse_filter = 2
color = Color(0.0885599, 0.0885599, 0.0885599, 0.4117647)

[node name="Label" type="Label" parent="Paused"]
layout_mode = 0
offset_left = 128.00002
offset_top = 11.0
offset_right = 194.00002
offset_bottom = 41.0
scale = Vector2(0.170195, 0.170195)
theme_override_fonts/font = ExtResource("2_5q4fb")
theme_override_font_sizes/font_size = 145
text = "Paused"
horizontal_alignment = 1

[node name="Lag" type="Button" parent="Paused"]
layout_mode = 0
offset_left = 16.0
offset_top = 154.0
offset_right = 53.188263
offset_bottom = 184.0
scale = Vector2(0.86048645, 0.5769231)
theme_override_fonts/font = ExtResource("2_5q4fb")
theme_override_font_sizes/font_size = 21
text = "Lag
"

[node name="Coins" type="Label" parent="."]
layout_mode = 0
offset_left = -140.0
offset_top = -90.0
offset_right = -88.0
offset_bottom = -67.0
theme_override_fonts/font = ExtResource("2_5q4fb")
theme_override_font_sizes/font_size = 16
text = "0"

[node name="Panel" type="Panel" parent="Coins"]
layout_mode = 0
offset_left = -20.0
offset_top = -1.0
offset_right = 20.0
offset_bottom = 39.0
scale = Vector2(0.5, 0.5)
theme_override_styles/panel = SubResource("StyleBoxTexture_mqm5i")

[connection signal="pressed" from="GameOver/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Shop/Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="Shop/Prev" to="." method="_on_prev_pressed"]
[connection signal="pressed" from="Shop/Boats/3/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Paused/Lag" to="." method="_on_lag_pressed"]
